# cpp-mailer

./: .gitignore  CMakeLists.txt  README.md  app.cpp  mailer.cpp  mailer.h
mailer/: CMakeLists.txt  mailer.cpp  mailer.h
