cmake_minimum_required(VERSION 3.12.3)
project(test_mailer)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
add_subdirectory(mailer)
list(APPEND CMAKE_PREFIX_PATH $ENV{LIB_CURL})
list(APPEND CMAKE_LIBRARY_PATH $ENV{LIB_CURL})
find_package(curl)
if (CURL_FOUND)
    include_directories(${CURL_INCLUDE_DIRS})
endif (CURL_FOUND)
add_executable(test_mailer app.cpp)
target_link_libraries(test_mailer mailer)
# install(TARGETS test_mailer DESTINATION bin)